<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.jetpacktodo.ui.AddTaskViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddTaskFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_textView"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <EditText
                    android:text="@={viewModel.taskTitle}"
                    android:id="@+id/add_task_title_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_task_title"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage|textAutoCorrect"
                    android:maxLines="1"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/details_textView"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <EditText
                    android:text="@={viewModel.taskDescription}"
                    android:id="@+id/add_task_details_editText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:hint="@string/enter_task_description"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage|textLongMessage|textAutoCorrect|textMultiLine"
                    android:textStyle="normal" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:onClick="@{()->viewModel.saveTask()}"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_done"
            app:fabSize="normal" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>